--- a/jewish-idaho/mikvah.css
+++ b/jewish-idaho/mikvah.css
@@ -691,6 +691,7 @@ body.mobile .g960.footer {
   margin: 0;
   float: none;
   display: block;
+  background: none;
 }
 
 body.mobile .co_body img,
@@ -799,8 +800,6 @@ div#formContainer .form-label-top,
 
 .form-label-auto label,
 .form-label-top label,
-.form-label-left label,
-.form-label-right label,
 div.co_body h3 {
   font-family: "Libre Baskerville", serif;
   text-transform: uppercase;
@@ -815,6 +814,11 @@ div.co_body h3 {
   margin-bottom: 4px;
   padding-left: 14px;
   margin-left: -36px;
+}
+
+.mobile .form-label-top label {
+  width: 100%;
+  margin-left: 0;
 }
 
 .form-all .label-message {
