--- a/chabad-vt/building.css
+++ b/chabad-vt/building.css
@@ -1,3 +1,4 @@
+@import url('https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css');
 @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700italic,700,400italic');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 
