--- a/chabad-vt/building.css
+++ b/chabad-vt/building.css
@@ -905,6 +905,10 @@ h3.form-header {
   margin-top: 124px;
 }
 
+.page-tools-sidebar {
+  display: none;
+}
+
 @media (min-width: 768px) {
   #cco_body {
     width: 750px;
