--- a/chabad-student-network-ottawa/building.css
+++ b/chabad-student-network-ottawa/building.css
@@ -874,6 +874,9 @@ div#goal-text {
   right: 90px;
   top: 7px;
   color: white;
+  background: #403546;
+  padding: 0 0 10px;
+  display: inline-block;
 }
 
 #donate-btn {
