--- a/chabad-vt/building.css
+++ b/chabad-vt/building.css
@@ -74,6 +74,11 @@
   margin-left: 20px;
 }
 
+.mobile .chabad_header a:last-child {
+  float: right;
+  width: 75%;
+}
+
 .chabad_header a:hover {
   text-decoration: none;
 }
