--- a/chabad-little-neck/style.css
+++ b/chabad-little-neck/style.css
@@ -26,3 +26,27 @@ body.cco_body #header_branding {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
+
+/* JLI PROMO */
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#jli-promo {
+  background: black;
+  margin-bottom: 15px;
+  display: flex;
+}
