Complete JLI desktop styling

--- a/chabad-little-neck/style.css
+++ b/chabad-little-neck/style.css
@@ -50,3 +50,16 @@ body.cco_body #header_branding {
   margin-bottom: 15px;
   display: flex;
 }
+
+#jli-promo img {
+  max-width: 100%;
+}
+
+#jli-promo #imagery {
+  width: 630px;
+}
+
+#jli-promo #promo-video {
+  padding: 20px;
+  min-width: 470px;
+}
